--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         function afegir()
         {
-
+            
         }
         function eliminar()
         {
@@ -18,7 +18,7 @@
         }
         function modificar()
         {
-            
+
         }
     </script>
 
@@ -32,7 +32,7 @@
     </form>
 
 
-    <ul>
+    <ul id="list">
         <li>Pera</li>
         <li>Poma</li>
         <li>Pinya</li>
