--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <script>
         function afegir()
         {
+            const fruitInput = document.getElementById("fname").value;
+            if (fruitInput) {
+                const newFruit = document.createElement("li");
+                newFruit.textContent = fruitInput; 
+                document.getElementById("list").appendChild(newFruit); 
+                document.getElementById("fname").value = ""; 
+            }
             
         }
         function eliminar()
@@ -23,12 +30,12 @@
     </script>
 
 
-    <form action="">
+    <form>
         <label for="fname">Fruita:</label>
-        <input type="text" id="fname" name="fname" placeholder="Ex:Pera"><br><br>
-        <input type="submit" value="Afegir" id="Afegir" onclick="afegir()">
-        <input type="submit" value="Eliminar" id="Eliminar" onclick="eliminar()">
-        <input type="submit" value="Modificar" id="Modificar" onclick="modificar()">
+        <input type="text" id="fname" name="fname" placeholder="Ex: Pera"><br><br>
+        <input type="button" value="Afegir" id="Afegir" onclick="afegir()">
+        <input type="button" value="Eliminar" id="Eliminar" onclick="eliminar()">
+        <input type="button" value="Modificar" id="Modificar" onclick="modificar()" placeholder="Ex: Pera:Kiwi">
     </form>
 
 
